<resources>
    <string name="app_name">Weather App</string>
    <string name="city">City</string>
    <string name="temperature">25 C</string>
    <string name="few_clouds">Few Clouds</string>
    <string name="details">Details</string>
    <string name="humidity">Humidity</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="add">Add</string>
    <string name="image_weather">imageWeather</string>
    <string name="_50">: 50%</string>
</resources>